add Mockito dependency improve unit tests split IniFileMapper tests into public and private methods tests using mocks